fix style in order to align portlet's header's elements

--- a/resources/css/paginationCSS.css
+++ b/resources/css/paginationCSS.css
@@ -20,6 +20,10 @@
 	text-align: center;
 }
 
+md-select {
+	margin: 0px !important;
+}
+
 /** CSS de la grille **/
 
 #portletTrombi {
